# ab-service

./: README.md  pyproject.toml  requirements.txt
api_app/: urls.py
auth_app/: models.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_password.py  0004_auto_20240805_1353.py  0005_alter_user_password.py
cart_app/: admin.py  models.py  schemas.py  serializers.py  services.py  tests.py  views.py
cart_app/migrations/: 0001_initial.py  0002_cartitem.py  0002_delete_cart.py
catalog_app/: admin.py  models.py  serializers.py  urls.py  views.py
catalog_app/migrations/: 0001_initial.py  0002_auto_20240719_0829.py  0009_auto_20240709_1641.py
image_app/migrations/: 0001_initial.py  0002_alter_image_comment.py
server/: settings.py  urls.py
